// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-smooch-web-integration Everthing is successful Walkthrough passes in the correct arguments to SmoochCore 1`] = `
Array [
  Array [
    Object {
      "keyId": "id",
      "scope": "app",
      "secret": "secret",
      "serviceUrl": "mock-smooch-api-url",
    },
  ],
  Array [
    Object {
      "keyId": "id",
      "scope": "app",
      "secret": "secret",
      "serviceUrl": "mock-smooch-api-url",
    },
  ],
]
`;

exports[`delete-smooch-web-integration Everthing is successful Walkthrough passes in the correct arguments to docClient.delete() 1`] = `
Array [
  Array [
    Object {
      "Key": Object {
        "id": "667802d8-2260-436c-958a-2ee0f71f73f0",
        "tenant-id": "66d83870-30df-4a3b-8801-59edff162034",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
  Array [
    Object {
      "Key": Object {
        "id": "667802d8-2260-436c-958a-2ee0f71f73f0",
        "tenant-id": "66d83870-30df-4a3b-8801-59edff162034",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
]
`;

exports[`delete-smooch-web-integration Everthing is successful Walkthrough passes in the correct arguments to docClient.get() 1`] = `
Array [
  Array [
    Object {
      "Key": Object {
        "id": "667802d8-2260-436c-958a-2ee0f71f73f0",
        "tenant-id": "66d83870-30df-4a3b-8801-59edff162034",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
  Array [
    Object {
      "Key": Object {
        "id": "667802d8-2260-436c-958a-2ee0f71f73f0",
        "tenant-id": "66d83870-30df-4a3b-8801-59edff162034",
      },
      "TableName": "us-east-1-dev-smooch",
    },
  ],
]
`;

exports[`delete-smooch-web-integration Everthing is successful Walkthrough passes in the correct arguments to secretClient.getSecretValue() 1`] = `
Array [
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
    },
  ],
  Array [
    Object {
      "SecretId": "us-east-1-dev-smooch-app",
    },
  ],
]
`;

exports[`delete-smooch-web-integration Everthing is successful Walkthrough passes in the correct arguments to smooch.integrations.delete() 1`] = `
Array [
  Array [
    Object {
      "appId": "5e31c81640a22c000f5d7f28",
      "integrationId": "667802d8-2260-436c-958a-2ee0f71f73f0",
    },
  ],
  Array [
    Object {
      "appId": "5e31c81640a22c000f5d7f28",
      "integrationId": "667802d8-2260-436c-958a-2ee0f71f73f0",
    },
  ],
]
`;

exports[`delete-smooch-web-integration Everthing is successful Walkthrough passes in the correct arguments to validateTenantPermissions 1`] = `
Array [
  Array [
    "66d83870-30df-4a3b-8801-59edff162034",
    Object {
      "user-id": "667802d8-2260-436c-958a-2ee0f71f73f0",
    },
    Array [
      "WEB_INTEGRATIONS_APP_UPDATE",
    ],
  ],
  Array [
    "66d83870-30df-4a3b-8801-59edff162034",
    Object {
      "user-id": "667802d8-2260-436c-958a-2ee0f71f73f0",
    },
    Array [
      "WEB_INTEGRATIONS_APP_UPDATE",
    ],
  ],
]
`;

exports[`delete-smooch-web-integration Everthing is successful sends back status 200 when the web integration is deleted successfully 1`] = `
Object {
  "body": Object {
    "deleted": true,
    "message": "The web integration with for tenant 66d83870-30df-4a3b-8801-59edff162034 and integrationId 667802d8-2260-436c-958a-2ee0f71f73f0 has been deleted successfully",
  },
  "status": 200,
}
`;

exports[`delete-smooch-web-integration sends back status 400 when there are invalid parameters 1`] = `
Object {
  "body": Object {
    "error": [ValidationError: "id" is required],
    "message": "Error: invalid params value(s). \\"id\\" is required",
  },
  "status": 400,
}
`;

exports[`delete-smooch-web-integration sends back status 403 when there are not enough permissions 1`] = `
Object {
  "body": Object {
    "expectedPermissions": Object {
      "tenant": Array [
        "WEB_INTEGRATIONS_APP_UPDATE",
      ],
    },
    "message": "Error not enough permissions",
  },
  "status": 403,
}
`;

exports[`delete-smooch-web-integration sends back status 500 when the app does not exist for the tenant 1`] = `
Object {
  "body": Object {
    "message": "The app does not exist for this tenant",
  },
  "status": 400,
}
`;

exports[`delete-smooch-web-integration sends back status 500 when there is a error deleting records in DynamoDB 1`] = `
Object {
  "body": Object {
    "message": "An Error has occurred trying to delete a record in DynamoDB",
  },
  "status": 500,
}
`;

exports[`delete-smooch-web-integration sends back status 500 when there is a error deleting web integration 1`] = `
Object {
  "body": Object {
    "message": "An Error has occurred trying to delete an web integration",
  },
  "status": 500,
}
`;

exports[`delete-smooch-web-integration sends back status 500 when there is a error fetching an app in DynamoDB 1`] = `
Object {
  "body": Object {
    "message": "An Error has occurred trying to fetch an app in DynamoDB",
  },
  "status": 500,
}
`;

exports[`delete-smooch-web-integration sends back status 500 when there is a error retrieving digital channels credentials 1`] = `
Object {
  "body": Object {
    "message": "An Error has occurred trying to retrieve digital channels credentials",
  },
  "status": 500,
}
`;

exports[`delete-smooch-web-integration sends back status 500 when there is a error validating digital channels credentials 1`] = `
Object {
  "body": Object {
    "message": "An Error has occurred trying to validate digital channels credentials",
  },
  "status": 500,
}
`;
